# oee-project

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
oee_logs/: OEE_Log_20251214_204058.numbers  OEE_Log_20251216_140307.csv  OEE_Log_20251231_163609.csv  OEE_Log_20251231_171457.csv  OEE_Log_20251231_175750.csv  OEE_Log_20260111_160605.csv  OEE_Log_20260112_011520.csv  OEE_Log_20260112_011729.csv  OEE_Log_20260113_155025.csv  OEE_Log_20260113_162253.csv  OEE_Log_20260113_164417.csv  OEE_Log_20260113_170157.csv  OEE_Log_20260113_172810.csv
src/oee/: dashboardv1.py  oee_monitor.py
tests/: test_basic.py
